--- a/index.html
+++ b/index.html
@@ -66,8 +66,12 @@
         }
         var map = L.map('map', {
             zoomControl:false, maxZoom:28, minZoom:1
-        }).fitBounds([[40.04786588965792,-75.23685791460845],[40.06740883858599,-75.20197470121293]]);
+        })
+        // Add the scale bar
+        
+        .fitBounds([[40.04786588965792,-75.23685791460845],[40.06740883858599,-75.20197470121293]]);
         var hash = new L.Hash(map);
+        L.control.scale({imperial: true, maxwidth:200}).addTo(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
         // remove popup's row if "visible-with-data"
